# ai-instruction

./: .gitignore  GIT_DUAL_SETUP.md  GUIDELINE.md  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  PACKAGE_GUIDE.md  README.md  advanced_demo.py  claude_example.py  git-dual-repo.sh  interactive_demo.py  migration_report_20250804_161340.md  migration_report_20250805_091322.md  migration_report_20250805_091817.md  migration_report_20250805_101746.md  migration_report_20250805_115430.md  migration_state_20250804_161340.json  migration_state_20250805_090909.json  migration_state_20250805_091322.json  migration_state_20250805_091817.json  migration_state_20250805_101746.json  migration_state_20250805_115430.json  prp-spring-migrate-v1.yaml  pyproject.toml  real_world_demo.py  requirements.txt  run_ai_migration.py  run_ai_migration_complete.py  run_demos.py  test_api_structure.py  verify_installation.py
.github/: CONTRIBUTING.md  SECURITY.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  code-quality.yml  dependency-update.yml  release.yml
context/: PRPs.md  README.md
context/API Documentation Generator/: TEMPLATE.md
context/Data Analysis/: TEMPLATE.md
context/Data Dictionary/: TEMPLATE.md
context/Plan builder/: TEMPLATE.md
context/R&D Analytics demonstration/: TEMPLATE.md
context/code review/: TEMPLATE.md
context/creative content generation/: TEMPLATE.md
context/technical analysis/: TEMPLATE.md
java-transformation/: .gitignore  GUIDELINE.md  PROJECT_SUMMARY.md  README.md  RUNNER_README.md  demo_migration_system.py  java_migration_rd_analytics.py  java_transform.py  phase1_legacy_analysis.py  phase2_transformation_planning.py  phase3_modern_implementation.py  phase4_error_checking.py  phase5_test_performances.py  rd_analytics.py  test_runner_demo.py
rd_analytics_outputs/data/: cost_summary_20250804_133058.json  cost_summary_20250804_134633.json  cost_summary_20250804_140807.json  cost_summary_20250804_140911.json  (+15 more)
tests/: test_package.py
(+99 files in other folders)
