[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-api-demos"
version = "1.0.0"
description = "Comprehensive Claude API demonstrations with practical examples"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AI Instruction Team", email = "support@example.com"}
]
keywords = ["claude", "anthropic", "api", "ai", "demos", "examples"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "anthropic>=0.60.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/your-username/claude-api-demos"
Documentation = "https://github.com/your-username/claude-api-demos#readme"
Repository = "https://github.com/your-username/claude-api-demos.git"
Issues = "https://github.com/your-username/claude-api-demos/issues"

[project.scripts]
claude-demos = "claude_api_demos.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"claude_api_demos" = ["*.md", "*.txt"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
